--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,16 @@
 <div class = "container-fluid m-2 pt-2">
 
+
+<style>
+    
+</style>
+
+
 <h1>Posts</h1>
 
     <div class="container-fluid pt-3">
         <% @posts.each do |post|%>
-            <div class="card bg-light text-dark" style="width:400px">
+            <div class="card shadow border-0 text-dark bg-light" style="width:400px">
                 <div class= "card-body">
                     <h3 class="card-title"><%= post.title%></h3>
                     <p class="card-text"><%= post.body %></p>
