Added script file with ruby code from practice

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
     </style>
 
-    <title>login: MyApp</title>
+    <title>MyApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -45,7 +45,7 @@
           <li> <%= link_to "Home", home_path, :class => 'btn btn-light'%></li>
         </ul>
         <ul class="navbar-nav navbar-right">
-          <li> <%= link_to "Create a new post", new_post_path, :class => 'btn btn-dark'%></li>
+          <li> <%= link_to "Create a new post", new_post_path, :class => 'btn btn-dark shadow-sm'%></li>
         </ul>
        </div>
       </nav>
