--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,8 @@
 
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
-          <li> <%= link_to "Home", home_path, :class => 'btn btn-light'%></li>
+          <li class="nav-item"> <%= link_to "Home", home_path, :class => 'btn btn-light'%></li>
+          <li class="nav-item"> <%= link_to "About", about_path, :class => 'btn btn-light'%></li>
         </ul>
         <ul class="navbar-nav navbar-right">
           <li> <%= link_to "Create a new post", new_post_path, :class => 'btn btn-dark shadow-sm'%></li>
