frontend small changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   
   <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-light border-bottom shadow-sm">
-      <h5 class="my-0 p-2" style="font-weight:light;">Blog</h5>
+      <h5 class="my-0 p-2 font-weight-normal">Blog</h5>
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="<%=home_path%>">Home</a>
         <a class="p-2 text-dark" href="<%=about_path%>">About</a>
